--- a/pages/history/history.wxss
+++ b/pages/history/history.wxss
@@ -29,10 +29,7 @@
 }
 .detailData{
   /* display: block; */
-  margin-top: 8rpx;
-  margin-bottom: 8rpx;
-  margin-left: 30rpx;
-  margin-right: 30rpx;
+  margin: 8rpx 30rpx;
   line-height: 70rpx;
   display: flex;
   justify-content: space-between; 
