修改圆圈颜色，车辆列表序号

--- a/pages/fleet_vehicle/fleet_vehicle.wxml
+++ b/pages/fleet_vehicle/fleet_vehicle.wxml
@@ -8,6 +8,10 @@
     <!-- <navigator url="{{item.url}}"> -->
     <view class="item" bindtap="functionItemClick" data-data="{{item}}">
       <view class="meta">
+      <view class="meta-left">
+        <text>{{index+1}}</text>
+      </view>
+      <view class="meta-right">
         <view class="line1">
           <image src="../../images/ic_plate.png"></image>
           <text class="title1">{{item.plateCode}}</text>
@@ -20,11 +24,11 @@
             <text class="title">[离线]</text>
           </view>
           <view wx:if="{{item.status==2}}" class="title2">
-            <image class="loc" src="../../images/ic_offline.png" />
+            <image class="loc" src="../../images/ic_fault_on.png" />
             <text class="title">[故障]</text>
           </view>
           <view wx:if="{{item.status==3}}" class="title2">
-            <image class="loc" src="../../images/ic_offline.png" />
+            <image class="loc" src="../../images/ic_charging_on.png" />
             <text class="title">[充电]</text>
           </view>
         </view>
@@ -56,7 +60,8 @@
           <image src="../../images/ic_qh.png"></image>
           <text class="title">氢耗：{{item.zqh}} kg</text>
         </view>
-
+      </view>
+       
       </view>
     </view>
     <!-- </navigator> -->
