故障改为在线，车辆列表按照里程排序

--- a/pages/fleet_vehicle/fleet_vehicle.wxml
+++ b/pages/fleet_vehicle/fleet_vehicle.wxml
@@ -15,18 +15,22 @@
         <view class="line1">
           <image src="../../images/ic_plate.png"></image>
           <text class="title1">{{item.plateCode}}</text>
+          <!-- 在线 -->
           <view class="title2" wx:if="{{item.status==1}}">
             <image class="loc" src="../../images/ic_online.png" />
             <text class="title">[在线]</text>
           </view>
+          <!-- 离线 -->
           <view wx:if="{{item.status==0}}" class="title2">
             <image class="loc" src="../../images/ic_offline.png" />
             <text class="title">[离线]</text>
           </view>
+          <!-- 故障 -->
           <view wx:if="{{item.status==2}}" class="title2">
             <image class="loc" src="../../images/ic_fault_on.png" />
-            <text class="title">[故障]</text>
+            <text class="title">[在线]</text>
           </view>
+          <!-- 充电 -->
           <view wx:if="{{item.status==3}}" class="title2">
             <image class="loc" src="../../images/ic_charging_on.png" />
             <text class="title">[充电]</text>
